--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-spring.application.name=CabinetMedicalProject
+spring.application.name=CabinetMedicalDB
+#le port
+server.port=8090
+##nom de la base
+#spring.datasource.url=jdbc:h2:mem:hospital-db
+##pour afficher la base sur le browser
+#spring.h2.console.enabled=true
+#spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CabinetMedicalDB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.mvc.format.date=yyyy-MM-dd
+spring.jpa.properties.hibernate.format_sql=true
+debug=true
