Log in as a doctor to view all patients and their consultations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.mvc.format.date=yyyy-MM-dd
 spring.jpa.properties.hibernate.format_sql=true
 debug=true
+logging.level.tn.pi.cabinetmedicalproject.web.PatientController=INFO
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
