display doctors card in admin page done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ logging.level.tn.pi.cabinetmedicalproject.web.PatientController=INFO
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+upload.dir=src/main/resources/static/uploads/
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.resources.static-locations=classpath:/static/
+spring.devtools.restart.enabled=false
+server.error.whitelabel.enabled=false
