--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,15 @@ debug=true
 logging.level.tn.pi.cabinetmedicalproject.web.PatientController=INFO
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+
+# Activer le support multipart pour télécharger des fichiers
+
+
 #
 #upload.dir=src/main/resources/static/uploads/
 #spring.servlet.multipart.enabled=true
