--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 
+logging.level.org.springframework.security=DEBUG
 
 
 # Activer le support multipart pour télécharger des fichiers
