--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,52 @@
-spring.application.name=CabinetMedicalDB
-#le port
+#spring.application.name=CabinetMedicalDB
+##le port
 server.port=8090
-##nom de la base
-#spring.datasource.url=jdbc:h2:mem:hospital-db
-##pour afficher la base sur le browser
-#spring.h2.console.enabled=true
+###nom de la base
+##spring.datasource.url=jdbc:h2:mem:hospital-db
+###pour afficher la base sur le browser
+##spring.h2.console.enabled=true
+##spring.jpa.defer-datasource-initialization=true
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/CabinetMedicalDB?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+#spring.jpa.show-sql=true
 #spring.jpa.defer-datasource-initialization=true
-
-spring.datasource.url=jdbc:mysql://localhost:3306/CabinetMedicalDB?createDatabaseIfNotExist=true
+#spring.mvc.format.date=yyyy-MM-dd
+#spring.jpa.properties.hibernate.format_sql=true
+#debug=true
+#logging.level.tn.pi.cabinetmedicalproject.web.PatientController=INFO
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=5MB
+#spring.servlet.multipart.max-request-size=5MB
+#
+#
+#logging.level.org.springframework.security=DEBUG
+#
+#
+## Activer le support multipart pour télécharger des fichiers
+#
+#
+##
+##upload.dir=src/main/resources/static/uploads/
+##spring.servlet.multipart.enabled=true
+##spring.servlet.multipart.max-file-size=2MB
+##spring.servlet.multipart.max-request-size=2MB
+##spring.resources.static-locations=classpath:/static/
+##spring.devtools.restart.enabled=false
+##server.error.whitelabel.enabled=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cabinetmedicaldb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
-spring.mvc.format.date=yyyy-MM-dd
-spring.jpa.properties.hibernate.format_sql=true
-debug=true
-logging.level.tn.pi.cabinetmedicalproject.web.PatientController=INFO
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
-
-
-logging.level.org.springframework.security=DEBUG
-
-
-# Activer le support multipart pour télécharger des fichiers
-
-
-#
-#upload.dir=src/main/resources/static/uploads/
-#spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.max-file-size=2MB
-#spring.servlet.multipart.max-request-size=2MB
-#spring.resources.static-locations=classpath:/static/
-#spring.devtools.restart.enabled=false
-#server.error.whitelabel.enabled=false
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
